--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <title>Monthly Bills</title>
   <style>
     body { background-color: rgba(200,255,0,.3); margin: 0 auto; width: 80% }
     #myHTML {
+      width: 100%;
       min-height: 12vmin;
       margin-top: 2vmin;
       background-color: rgba(200,255,0,.6);
@@ -26,7 +28,26 @@
       font-size: 8vmin;
       color: rgba(88, 196, 234,1);
     }
-    #pwmngr div { margin: 0.1vmin; padding: 0.2vmin; text-align:left; float:left; border: 0.1vmin solid rgba(240,144,6,1); }
+    #pwmngr div { width: 100%; margin: 0.1vmin; padding: 0.2vmin; text-align:center; float:left; border: 0.1vmin solid rgba(240,144,6,1); }
+    a:link {
+      text-decoration: none;
+      color: rgba(30,130,76,1);
+    }
+
+    a:visited {
+      text-decoration: none;
+      color: rgba(30,130,76,1);
+    }
+
+    a:hover {
+      text-decoration: none;
+      color: rgba(0,0,255,.6);
+    }
+
+    a:active {
+      text-decoration: none;
+      color: rgba(30,130,76,1);
+    }
   </style>
   <body>
     <div id='myHTML'>
@@ -34,68 +55,68 @@
       <div id='pwmngr'>
         <div style='clear:both; margin:2vmin; width:auto; height: auto; '>
 
-          <div style='width:40vmin; '>
+          <div style='width:64vmin; text-align:left; '>
             Account
           </div>
-          <div style='width:8vmin; text-align:center; '>Due Date</div>
-          <div style='width:12vmin; '>Username</div>
-          <div style='width:12vmin; '>Password</div>
+          <div style='width:12vmin; '>Due Date</div>
+          <div style='width:15vmin; '>Username</div>
+          <div style='width:15vmin; '>Password</div>
 
-         <div style='width:40vmin; '>
+         <div style='clear:both; width:64vmin; text-align:left; '>
            <a href='https://heroku.com' title='Web Hosting' target='_blank'>HEROKU</a>
          </div>
-         <div style='width:8vmin; text-align:center; '>1</div>
-         <div style='width:12vmin; '>user1name</div>
-         <div style='width:12vmin; '>pass1word</div>
+         <div style='width:12vmin; '>1</div>
+         <div style='width:15vmin; '>user1name</div>
+         <div style='width:15vmin; '>pass1word</div>
 
-         <div style='clear:both; width:40vmin; '>
+         <div style='clear:both; width:64vmin; text-align:left; '>
            <a href="https://fpl.com" title="Electric Bill" target="_blank">FPL</a>
          </div>
-         <div style='width:8vmin; text-align:center; '>7</div>
-         <div style='width:12vmin; '>user2name</div>
-         <div style='width:12vmin; '>pass2word</div>
+         <div style='width:12vmin; '>7</div>
+         <div style='width:15vmin; '>user2name</div>
+         <div style='width:15vmin; '>pass2word</div>
 
-         <div style='clear:both; width:40vmin; '>
+         <div style='clear:both; width:64vmin; text-align:left; '>
            <a href="https://www.paypal.com" title="PayPal" target="_blank">PayPal</a>
          </div>
-         <div style='width:8vmin; text-align:center; '>9</div>
-         <div style='width:12vmin; '>user3name</div>
-         <div style='width:12vmin; '>pass3word</div>
+         <div style='width:12vmin; '>9</div>
+         <div style='width:15vmin; '>user3name</div>
+         <div style='width:15vmin; '>pass3word</div>
 
-         <div style='clear:both; width:40vmin; '>
+         <div style='clear:both; width:64vmin; text-align:left; '>
            <a href="https://sprint.com" title="Sprint Cellular" target="_blank">SPRINT Cellular</a>
          </div>
-         <div style='width:8vmin; text-align:center; '>11</div>
-         <div style='width:12vmin; '>user4name</div>
-         <div style='width:12vmin; '>pass4word</div>
+         <div style='width:12vmin; '>11</div>
+         <div style='width:15vmin; '>user4name</div>
+         <div style='width:15vmin; '>pass4word</div>
 
-         <div style='clear:both; width:40vmin; '>
+         <div style='clear:both; width:64vmin; text-align:left; '>
            <a href="https://bestbuy.accountonline.com" title="Best Buy Visa Card" target="_blank">BEST BUY</a>
          </div>
-         <div style='width:8vmin; text-align:center; '>13</div>
-         <div style='width:12vmin; '>user5name</div>
-         <div style='width:12vmin; '>pass5word</div>
+         <div style='width:12vmin; '>13</div>
+         <div style='width:15vmin; '>user5name</div>
+         <div style='width:15vmin; '>pass5word</div>
 
-         <div style='clear:both; width:40vmin; '>
+         <div style='clear:both; width:64vmin; text-align:left; '>
            <a href="https://www.broward.org/WaterServices/CustomerService/Pages/Utilform.aspx" title="Water Bill" target="_blank">Broward/Water-Sewer</a>
          </div>
-         <div style='width:8vmin; text-align:center; '>15</div>
-         <div style='width:12vmin; '>user6name</div>
-         <div style='width:12vmin; '>pass6word</div>
+         <div style='width:12vmin; '>15</div>
+         <div style='width:15vmin; '>user6name</div>
+         <div style='width:15vmin; '>pass6word</div>
 
-         <div style='clear:both; width:40vmin; '>
+         <div style='clear:both; width:64vmin; text-align:left; '>
            <a href="https://my.xfinity.com/?cid=cust" title="Cable bill" target="_blank">Comcast/Xfinity</a>
          </div>
-         <div style='width:8vmin; text-align:center; '>15</div>
-         <div style='width:12vmin; '>user7name</div>
-         <div style='width:12vmin; '>pass7word</div>
+         <div style='width:12vmin; '>15</div>
+         <div style='width:15vmin; '>user7name</div>
+         <div style='width:15vmin; '>pass7word</div>
 
-         <div style='clear:both; width:40vmin; '>
+         <div style='clear:both; width:64vmin; text-align:left; '>
            <a href="https://www.chase.com/personal/credit-cards/amazon" title="Amazon Credit" target="_blank">Amazon Prime by Chase</a>
          </div>
-         <div style='width:8vmin; text-align:center; '>17</div>
-         <div style='width:12vmin; '>user8name</div>
-         <div style='width:12vmin; '>pass8word</div>
+         <div style='width:12vmin; '>17</div>
+         <div style='width:15vmin; '>user8name</div>
+         <div style='width:15vmin; '>pass8word</div>
 
         </div>
       </div> <!-- pwmngr --------->
