--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       font-size: 8vmin;
       color: rgba(88, 196, 234,1);
     }
-    #pwmngr div { width: 100%; margin: 0.1vmin; padding: 0.2vmin; text-align:center; float:left; border: 0.1vmin solid rgba(240,144,6,1); }
+    #pwmngr div { margin: 0.1vmin; padding: 0.2vmin; text-align:center; float:left; border: 0.1vmin solid rgba(240,144,6,1); }
     a:link {
       text-decoration: none;
       color: rgba(30,130,76,1);
@@ -48,75 +48,79 @@
       text-decoration: none;
       color: rgba(30,130,76,1);
     }
+    ._payee { clear:both; width: 60%; }
+    ._dueDate { width: 9%; }
+    ._userName { width: 14%; }
+    ._passWord { width: 14%; }
   </style>
   <body>
     <div id='myHTML'>
       <div id='welcome'>Bills Schedule</div>
       <div id='pwmngr'>
-        <div style='clear:both; margin:2vmin; width:auto; height: auto; '>
+        <div style='clear:both; margin:2vmin; width:96%; height: auto; '>
 
-          <div style='width:64vmin; text-align:left; '>
+          <div class='_payee' style='text-align:left; '>
             Account
           </div>
-          <div style='width:12vmin; '>Due Date</div>
-          <div style='width:15vmin; '>Username</div>
-          <div style='width:15vmin; '>Password</div>
+          <div class='_dueDate'>Due Date</div>
+          <div class='_userName'>Username</div>
+          <div class='_passWord'>Password</div>
 
-         <div style='clear:both; width:64vmin; text-align:left; '>
+         <div class='_payee' style='text-align:left; '>
            <a href='https://heroku.com' title='Web Hosting' target='_blank'>HEROKU</a>
          </div>
-         <div style='width:12vmin; '>1</div>
-         <div style='width:15vmin; '>user1name</div>
-         <div style='width:15vmin; '>pass1word</div>
+         <div class='_dueDate'>1</div>
+         <div class='_userName'>user1name</div>
+         <div class='_passWord'>pass1word</div>
 
-         <div style='clear:both; width:64vmin; text-align:left; '>
+         <div class='_payee' style='text-align:left; '>
            <a href="https://fpl.com" title="Electric Bill" target="_blank">FPL</a>
          </div>
-         <div style='width:12vmin; '>7</div>
-         <div style='width:15vmin; '>user2name</div>
-         <div style='width:15vmin; '>pass2word</div>
+         <div class='_dueDate'>7</div>
+         <div class='_userName'>user2name</div>
+         <div class='_passWord'>pass2word</div>
 
-         <div style='clear:both; width:64vmin; text-align:left; '>
+         <div class='_payee' style='text-align:left; '>
            <a href="https://www.paypal.com" title="PayPal" target="_blank">PayPal</a>
          </div>
-         <div style='width:12vmin; '>9</div>
-         <div style='width:15vmin; '>user3name</div>
-         <div style='width:15vmin; '>pass3word</div>
+         <div class='_dueDate'>9</div>
+         <div class='_userName'>user3name</div>
+         <div class='_passWord'>pass3word</div>
 
-         <div style='clear:both; width:64vmin; text-align:left; '>
+         <div class='_payee' style='text-align:left; '>
            <a href="https://sprint.com" title="Sprint Cellular" target="_blank">SPRINT Cellular</a>
          </div>
-         <div style='width:12vmin; '>11</div>
-         <div style='width:15vmin; '>user4name</div>
-         <div style='width:15vmin; '>pass4word</div>
+         <div class='_dueDate'>11</div>
+         <div class='_userName'>user4name</div>
+         <div class='_passWord'>pass4word</div>
 
-         <div style='clear:both; width:64vmin; text-align:left; '>
+         <div class='_payee' style='text-align:left; '>
            <a href="https://bestbuy.accountonline.com" title="Best Buy Visa Card" target="_blank">BEST BUY</a>
          </div>
-         <div style='width:12vmin; '>13</div>
-         <div style='width:15vmin; '>user5name</div>
-         <div style='width:15vmin; '>pass5word</div>
+         <div class='_dueDate'>13</div>
+         <div class='_userName'>user5name</div>
+         <div class='_passWord'>pass5word</div>
 
-         <div style='clear:both; width:64vmin; text-align:left; '>
+         <div class='_payee' style='text-align:left; '>
            <a href="https://www.broward.org/WaterServices/CustomerService/Pages/Utilform.aspx" title="Water Bill" target="_blank">Broward/Water-Sewer</a>
          </div>
-         <div style='width:12vmin; '>15</div>
-         <div style='width:15vmin; '>user6name</div>
-         <div style='width:15vmin; '>pass6word</div>
+         <div class='_dueDate'>15</div>
+         <div class='_userName'>user6name</div>
+         <div class='_passWord'>pass6word</div>
 
-         <div style='clear:both; width:64vmin; text-align:left; '>
+         <div class='_payee' style='text-align:left; '>
            <a href="https://my.xfinity.com/?cid=cust" title="Cable bill" target="_blank">Comcast/Xfinity</a>
          </div>
-         <div style='width:12vmin; '>15</div>
-         <div style='width:15vmin; '>user7name</div>
-         <div style='width:15vmin; '>pass7word</div>
+         <div class='_dueDate'>15</div>
+         <div class='_userName'>user7name</div>
+         <div class='_passWord'>pass7word</div>
 
-         <div style='clear:both; width:64vmin; text-align:left; '>
+         <div class='_payee' style='text-align:left; '>
            <a href="https://www.chase.com/personal/credit-cards/amazon" title="Amazon Credit" target="_blank">Amazon Prime by Chase</a>
          </div>
-         <div style='width:12vmin; '>17</div>
-         <div style='width:15vmin; '>user8name</div>
-         <div style='width:15vmin; '>pass8word</div>
+         <div class='_dueDate'>17</div>
+         <div class='_userName'>user8name</div>
+         <div class='_passWord'>pass8word</div>
 
         </div>
       </div> <!-- pwmngr --------->
