--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
          <div class='_passWord'>pass8word</div>
 
         </div>
-      </div> <!-- pwmngr --------->
+      </div>
+      <!-- I really like the color combination of your page, removed your invalid comment also -->
     </div>
   </body>
 </html>
